<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Divises</string>
    <string name="action_settings">Settings</string>
    <string name="defaultFrom">1.00</string>
    <string name="defaultCommission">3.0</string>
    <string name="defaultTipus">1.2456891</string>
    <string name="lblTipus">Tipus $/€</string>
    <string name="lblCommission">% Comisión</string>
    <string name="EUR">€</string>
    <string name="USD">$</string>
    <string name="flip">Cambiar</string>

</resources>
