<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/btnChange"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:nestedScrollingEnabled="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtFrom"
        android:text="@string/defaultFrom"
        android:layout_above="@+id/btnChange"
        android:layout_alignRight="@+id/btnChange"
        android:layout_alignEnd="@+id/btnChange"
        android:numeric="decimal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtTo"
        android:layout_below="@+id/btnChange"
        android:layout_alignRight="@+id/btnChange"
        android:layout_alignEnd="@+id/btnChange"
        android:enabled="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtTipus"
        android:text="@string/defaultTipus"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/txtComission"
        android:layout_alignStart="@+id/txtComission" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtComission"
        android:text="@string/defaultComission"
        android:layout_below="@+id/lblTipus"
        android:layout_alignLeft="@+id/txtFrom"
        android:layout_alignStart="@+id/txtFrom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblTipus"
        android:id="@+id/lblTipus"
        android:layout_alignBottom="@+id/txtTipus"
        android:layout_alignLeft="@+id/lblComission"
        android:layout_alignStart="@+id/lblComission" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblComission"
        android:id="@+id/lblComission"
        android:layout_alignBottom="@+id/txtComission"
        android:layout_toRightOf="@+id/txtComission"
        android:layout_toEndOf="@+id/txtComission" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/USD"
        android:id="@+id/lblTo"
        android:layout_alignBottom="@+id/txtTo"
        android:layout_toRightOf="@+id/txtTo"
        android:layout_toEndOf="@+id/txtTo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/EUR"
        android:id="@+id/lblFrom"
        android:layout_above="@+id/btnChange"
        android:layout_toRightOf="@+id/btnChange"
        android:layout_toEndOf="@+id/btnChange" />

</RelativeLayout>
